[package]
name = "rust_rusty"
version = "0.1.0"
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.78"
# autocxx = { path = "..", version = "0.23.1" }
autocxx =  "0.23.1"

[build-dependencies]
# cxx-build = "1.0"
# autocxx-build = { path = "../gen/build", version = "0.23.1" }
autocxx-build = "0.23.1"
miette = { version = "5", features = ["fancy"] }

[lib]
crate-type = ["staticlib"]
